Fix CodeFolding to work better in Bramble, turn on by default to aid readability

--- a/src/extensions/default/bramble/stylesheets/darkTheme.css
+++ b/src/extensions/default/bramble/stylesheets/darkTheme.css
@@ -142,7 +142,7 @@ div.CodeMirror-selected {
   color: #75715E;
 }
 .CodeMirror-foldgutter-open::after {
-  content: "\25bd";
+  content: "\25bc";
 }
 .CodeMirror-foldmarker {
   background-color: #333;
